Fix #454: Footer layout issues

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -19,9 +19,6 @@ $section-border-color: #e6e6e6;
 
 @import "foundation";
 
-$footer-height: emCalc(160);
-$footer-height-mobile: emCalc(350);
-
 @mixin brighten($factor) {
   filter: brightness($factor);
   -webkit-filter: brightness($factor);
@@ -49,7 +46,6 @@ html, body {
 }
 #wrapper {
   min-height: 100%;
-  margin-bottom: -$footer-height;
 
   &:before {
     content: "";
@@ -69,12 +65,6 @@ html, body {
       left:50%;
       margin-left: $row-width * -0.5;
     }
-  }
-
-  &:after {
-    content: "";
-    display: block;
-    height: $footer-height;
   }
 }
 
@@ -124,19 +114,26 @@ header {
 footer {
   background:$dark-grey;
   color: $white;
-  height:$footer-height-mobile;
-  @media #{$small} {
-    height: $footer-height;
-  }
-   h5 {
+  h5 {
     color: $white;
-   }
+  }
   p {
     text-align:center;
     margin:auto;
     color:white;
     padding:10px 0;
     font-size:0.9em;
+  }
+  > #sitemap {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-start;
+    > div {
+      display: inline-block; /* This is purely a fallback for old browsers, probably not necessary */
+      padding: 0.8em;
+      vertical-align: top;
+      flex: 1;
+    }
   }
 }
 
